# description if packaging system requirements
[build-system]
requires = [
    "flit_core >=3.2,<4",
]
build-backend = "flit_core.buildapi"

# description of current module
[project]
name = "aedttest"
version = "0.0.1.dev5"

description = """
Ansys Electronics Desktop Testing Framework.
Current module allows to setup and run automated tests and validate results across multiple versions of
Ansys Electronics Desktop products, eg HFSS, Maxwell, Icepak, Q3D, etc
"""

authors = [
    {name = "Maksim Beliaev", email = "maksim.beliaev@ansys.com"},
    {name = "Bo Yang", email = "bo.yang@ansys.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "pyaedt==0.4.16",
    "Django==3.2.8",
]

# development dependencies
[project.optional-dependencies]
test = [
    "pre-commit==2.15.0",
    "mypy==0.910",
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
]

deploy = [
    "flit==3.4.0",
]

[project.urls]
Home = "https://github.com/ansys/aedt-testing"

# CLI script command
[project.scripts]
aedt_test_runner = "aedttest.aedt_test_runner:main"

[tool.isort]
profile = "black"

